--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@iconify-icons/mdi": "^1.2.48",
+    "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "dom": "^0.0.3",
